# Converseen

./: .directory  .gitignore  CHANGELOG  CMakeLists.txt  COPYING  INSTALL  INSTALL.md  README  README.md  appveyor.yml  converseen.appdata.xml  converseen.nsi  converseen.pro  converseen.rc  converseen.sln  converseen.vcxproj  resource.h  resources.qrc
.github/: FUNDING.yml
.github/workflows/: build-appimage-release.yaml  build-appimage-release.yaml-stopped  build-appimage-test.yaml  build-macos-intel-release.yaml  build-macos-release.yaml  build-macos-release.yaml-stopped  build-macos-test.yaml  build-snap-release.yaml  build-windows-release.yaml  build-windows-release.yaml-stopped  build.yaml  src-sf-release.yaml  windows-codesigned-release.yaml
FileFormats/: Readableformats.txt  WritableFormats.txt
Windows/: Readableformats.txt
cmake/: RemoveInnoVersion.vbs.in  windeployqt.cmake.in  wixCheckInnoVersion.xml.in
loc/: converseen_cs_CZ.qm  converseen_cs_CZ.ts  converseen_da_DK.qm  converseen_da_DK.ts  converseen_de_DE.qm  converseen_de_DE.ts  converseen_en_US.ts  converseen_es_CL.qm  converseen_es_CL.ts  converseen_fr_FR.qm  converseen_fr_FR.ts  converseen_hu_HU.qm  converseen_hu_HU.ts  converseen_it_IT.qm  converseen_it_IT.ts  converseen_ja_JP.qm  converseen_ja_JP.ts  converseen_ko.ts  converseen_ko_KR.ts  converseen_pl_PL.qm  converseen_pl_PL.ts  converseen_pt_BR.qm  converseen_pt_BR.ts  converseen_ru_RU.qm  converseen_ru_RU.ts  converseen_si_SI.ts  converseen_sv_SE.qm  converseen_sv_SE.ts  converseen_tr_TR.qm  converseen_tr_TR.ts  converseen_uk_UA.qm  converseen_uk_UA.ts  converseen_zh_CN.qm  converseen_zh_CN.ts
package/AppImage/: AppRun  README.md  build-imagemagick.sh  build-with-cmake.sh  build-with-qmake.sh  converseen-appimage.sh  finalize-appimage.sh  get-dependencies.sh
package/AppImage/.old_appimage/: build-with-cmake.sh  finalize-appimage.sh
package/Snap/: snapcraft.yaml
package/Windows/: converseen_win32_setup.iss  version.txt
package/macOS/: version.txt
res/: converseen.desktop  converseen.icns  converseen_import.desktop
src/: cachingsystem.cpp  cachingsystem.h  combofilters.cpp  combofilters.h  converter.cpp  converter.h  dialogconversionstatus.cpp  dialogconversionstatus.h  dialoginfo.cpp  dialoginfo.h  dialogmultipageeditor.cpp  dialogmultipageeditor.h  dialogoptions.cpp  dialogoptions.h  dialogquality.cpp  dialogquality.h  dialogshowupdatemsg.cpp  dialogshowupdatemsg.h  formats.cpp  formats.h  globals.cpp  globals.h  imageinformations.cpp  imageinformations.h  inisettings.cpp  inisettings.h  magickdefine.cpp  magickdefine.h  main.cpp  mainwindowimpl.cpp  mainwindowimpl.h  mylabelpreviewer.cpp  mylabelpreviewer.h  pixtreewidget.cpp  pixtreewidget.h  pushcolorchooser.cpp  pushcolorchooser.h  sizeutil.cpp  sizeutil.h  thumbnailgeneratorthread.cpp  (+7 more)
src/Modules/: multipageconverter.cpp  multipageconverter.h
ui/: dialogconversionstatus.ui  dialoginfo.ui  dialogmultipageeditor.ui  dialogoptions.ui  dialogquality.ui  dialogshowupdatemsg.ui  mainwindow.ui
